# cloud-trade-bot

./: requirements.txt
alpha-platform/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alpha-platform/alembic/: env.py
alpha-platform/alembic/versions/: 0001_initial.py
alpha-platform/app/: __init__.py
alpha-platform/app/ai_reports/: generator.py
alpha-platform/app/api/: main.py
alpha-platform/app/config/: __init__.py  settings.py
alpha-platform/app/core/: __init__.py  constants.py  enums.py  exceptions.py  interfaces.py  models.py
alpha-platform/app/dashboard/: app.py  main.py
alpha-platform/app/dashboard/pages/: ai_report.py  history.py  overview.py  positions.py  risk_monitor.py  signals.py  strategy_lab.py
alpha-platform/app/data/: processors.py  sample_data.py
alpha-platform/app/data/providers/: csv_provider.py
alpha-platform/app/notifications/: telegram.py
alpha-platform/app/paper_engine/: broker.py
alpha-platform/app/research/: backtest_runner.py  metrics.py  ranking.py  walk_forward.py
alpha-platform/app/risk/: manager.py
alpha-platform/app/services/: heartbeat.py
alpha-platform/app/storage/: database.py  models.py
alpha-platform/app/strategies/: __init__.py  base.py
alpha-platform/app/utils/: logging.py
alpha-platform/config/: settings.yaml
alpha-platform/data/historical/: BTCUSDT_1h.csv
alpha-platform/deploy/: Dockerfile.api  Dockerfile.dashboard
alpha-platform/scripts/: generate_sample_data.py  run_research.py
alpha-platform/tests/unit/: test_data_processors.py  test_metrics.py  test_notifications_and_registry.py  test_paper_engine.py
(+4 files in other folders)
